--- a/model.ipynb
+++ b/model.ipynb
@@ -2963,9 +2963,9 @@
     "\n",
     "lora_config = LoraConfig(\n",
     "    task_type=TaskType.SEQ_2_SEQ_LM,\n",
-    "    r=32,\n",
-    "    lora_alpha=64,\n",
-    "    lora_dropout=0.1,\n",
+    "    r=48,\n",
+    "    lora_alpha=96,\n",
+    "    lora_dropout=0.12,\n",
     "    bias=\"none\",\n",
     "    target_modules=[\"q\", \"v\"],  \n",
     "    inference_mode=False,\n",
@@ -3323,7 +3323,7 @@
     "    num_train_epochs=5,\n",
     "    per_device_train_batch_size=4,\n",
     "    per_device_eval_batch_size=8,\n",
-    "    warmup_ratio=0.1,\n",
+    "    warmup_ratio=0.12,\n",
     "    evaluation_strategy=\"epoch\",\n",
     "    eval_steps=40,\n",
     "    save_strategy=\"epoch\",\n",
@@ -3331,10 +3331,10 @@
     "    logging_steps=55,\n",
     "    fp16=True,\n",
     "    bf16=False,\n",
-    "    learning_rate=1e-4,\n",
+    "    learning_rate=5e-4,\n",
     "    gradient_accumulation_steps=8,\n",
     "    dataloader_num_workers=1,\n",
-    "    generation_num_beams=1,\n",
+    "    generation_num_beams=4,\n",
     "    load_best_model_at_end=True,\n",
     "    greater_is_better=True,\n",
     "    remove_unused_columns=True,\n",
@@ -3346,10 +3346,10 @@
     "    dataloader_pin_memory=False,\n",
     "    gradient_checkpointing=True,\n",
     "    optim=\"adamw_torch\",\n",
-    "    weight_decay=0.01,\n",
-    "    max_grad_norm=1.0,\n",
+    "    weight_decay=0.015,\n",
+    "    max_grad_norm=0.8,\n",
     "    lr_scheduler_type=\"cosine\",\n",
-    "    warmup_steps=200,\n",
+    "    warmup_steps=250,\n",
     ")\n",
     "\n",
     "early_stopping = EarlyStoppingCallback(early_stopping_patience=3, early_stopping_threshold=0.001)\n",
@@ -3603,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3619,7 +3619,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating responses:  31%|███       | 4/13 [02:50<06:10, 41.22s/it]"
+      "Generating responses: 100%|██████████| 13/13 [09:10<00:00, 42.33s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated 100 responses\n",
+      "Generated 100 responses for 100 examples\n",
+      "\n",
+      "Sample generations:\n",
+      "\n",
+      "--- Example 1 ---\n",
+      "Input: i am a nurse with 2 years of experience in general nursing working in a sub county hospitals and nur...\n",
+      "Generated: a 24 year old female complains of sharp pain in the right side of the nose that started 2 days ago and has been gradually worsening no past medical history on assessment there is tenderness on palpation on the left side\n",
+      "\n",
+      "--- Example 2 ---\n",
+      "Input: i am a nurse with 22 years of experience in general nursing working in a sub county hospitals and nu...\n",
+      "Generated: provide comprehensive clinical assessment including diagnosis, management plan, and investigations needed.\n",
+      "\n",
+      "--- Example 3 ---\n",
+      "Input: i am a nurse working in a national referral hospitals in uasin gishu county in kenya a 22 year old m...\n",
+      "Generated: based on the following patient presentation,\n",
+      "\n",
+      "Saved submission with 100 predictions to submission.csv\n"
      ]
     }
    ],
@@ -3643,7 +3667,7 @@
     "            # Prepare batch\n",
     "            for j in range(i, batch_end):\n",
     "                prompt = str(test_data.iloc[j]['Prompt'])\n",
-    "                enriched_prompt = f\"Clinical Assessment Task: Based on the following patient presentation, provide a comprehensive clinical assessment including diagnosis, management plan, and investigations needed.\\n\\nPatient Presentation: {prompt}\\n\\nClinical Assessment:\"\n",
+    "                enriched_prompt = f\"Generate clinical response: {prompt}\"\n",
     "                batch_prompts.append(enriched_prompt)\n",
     "            \n",
     "            # Tokenize\n",
@@ -3659,16 +3683,16 @@
     "            # Generate\n",
     "            outputs = model.generate(\n",
     "                **inputs,\n",
-    "                max_length=500,\n",
+    "                max_length=640,\n",
     "                min_length=50,\n",
-    "                num_beams=3,\n",
+    "                num_beams=2,\n",
     "                early_stopping=True,\n",
     "                do_sample=False,\n",
-    "                temperature=0.7,\n",
-    "                top_p=0.85,\n",
-    "                top_k=40,\n",
-    "                repetition_penalty=1.3,\n",
-    "                length_penalty=1.2,\n",
+    "                temperature=0.8,\n",
+    "                top_p=0.9,\n",
+    "                top_k=50,\n",
+    "                repetition_penalty=1.1,\n",
+    "                length_penalty=1.0,\n",
     "                no_repeat_ngram_size=2,\n",
     "                pad_token_id=tokenizer.pad_token_id,\n",
     "                eos_token_id=tokenizer.eos_token_id,\n",
@@ -3679,16 +3703,9 @@
     "            responses = tokenizer.batch_decode(outputs, skip_special_tokens=True)\n",
     "            cleaned_responses = []\n",
     "            for response in responses:\n",
-    "                if \"clinical assessment:\" in response.lower():\n",
-    "                    response = response.lower().split(\"clinical assessment:\")[-1]\n",
-    "                elif \"clinical assessment task:\" in response.lower():\n",
-    "                    response = response.lower().split(\"clinical assessment task:\")[-1]\n",
+    "                if \"generate clinical response:\" in response.lower():\n",
+    "                    response = response.lower().split(\"generate clinical response:\")[-1]\n",
     "                response = response.strip()\n",
-    "                \n",
-    "                if response.startswith(\"i am a nurse\"):\n",
-    "                    parts = response.split(\".\", 1)\n",
-    "                    if len(parts) > 1:\n",
-    "                        response = parts[1].strip()\n",
     "                cleaned_responses.append(response)\n",
     "            \n",
     "            all_responses.extend(cleaned_responses)\n",
